--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,6 @@ dependencies:
   stop_watch_timer: ^1.3.1
   carousel_slider: ^4.0.0
   get: ^4.3.8
-  screenshot: ^1.2.3
-  image_gallery_saver: ^1.6.9
-  permission_handler: ^8.1.1
   flutter_launcher_icons: ^0.9.2
   firebase_auth: ^3.5.1
   google_sign_in: ^5.4.0
@@ -52,7 +49,9 @@ dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/flunny_2.png"
+  image_path: "images/flunnyicon_1.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "images/flunnyicon_1.png"
   
 
 dev_dependencies:
