--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   provider: ^6.0.3
   cloud_firestore: ^3.4.1
+  animated_icon_button: ^1.0.2
 
 flutter_icons:
   android: "launcher_icon"
