--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cloud_firestore: ^3.4.1
   animated_icon_button: ^1.0.2
   simple_gradient_text: ^1.2.3
+  keyboard_visibility_pro: ^0.0.1
 
 flutter_icons:
   android: "launcher_icon"
