--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,9 +52,9 @@ dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/flunnyicon_1.png"
+  image_path: "images/flunnyicon_2.png"
   adaptive_icon_background: "#ffffff"
-  adaptive_icon_foreground: "images/flunnyicon_1.png"
+  adaptive_icon_foreground: "images/flunnyicon_2.png"
   
 
 dev_dependencies:
@@ -81,7 +81,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/
+     - images/logo/flunny_login.png
+     - images/login/
+     - images/user/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
