--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   animated_icon_button: ^1.0.2
   simple_gradient_text: ^1.2.3
   keyboard_visibility_pro: ^0.0.1
+  firebase_core: ^1.23.0
 
 flutter_icons:
   android: "launcher_icon"
